# pypipeline

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/pypipeline/: __init__.py  _compose.py  _pipeline.py  _warnings.py  compose.py  pipeline.py
tests/: pipeline_examples_test.py  pipeline_test.py
