[project]
name = "pypipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ihor H", email = "jaspery@pm.me" }]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["INP001", "S101", "ANN201"]

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::pypipeline._warnings.UnstableFeatureWarning"]
