[project]
name = "pypipeline"
version = "0.1.0"
description = "Type-safe functional pipeline composition with some support of result unpacking between stages."
readme = "README.md"
authors = [{ name = "Ihor H", email = "jaspery@pm.me" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ihorh/pypipeline"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["ANN201", "D100", "D103", "INP001", "PLR2004", "S101", "T201"]

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::pypipeline._warnings.UnstableFeatureWarning",
]
